0.6.0
-----
1. Grouped style for playlists.
2. Fix reading of lyrics files with special characters - thanks to Martin
   Blumenstingl for the patch.
3. Give tray icon a tooltip - thanks to Martin Blumenstingl for the patch.

0.5.1
-----
 1. Reduce QMutex usage - have MPDStats/MPDStatus emitted as objects, and
    stored in relevant classes.
 2. When renaming files, rename file.lyrics if it exists.
 3. Use QDateTime::toString(Qt::SystemLocaleShortDate) to show server last
    update in server info page.
 4. TagLib is required for build.
 5. Enable tag editor for Qt builds.
 6. Qt-only build does not install icons, so we need to embed the 16px and
    22px version of each into the application.
 7. Save lyrics and info pages zoom settings.
 8. If compiled for Qt-only, and icon theme is not oxygen, then check to see
    if current icon theme has required icons (devices/media-optical-audio, etc)
    If not, then if oxygen is installed - set icon theme to oxygen.
 9. Allocate more space for tab if required - up to a max of 50% extra. This
    fixes "HTTP Server" config page title under Ubuntu with Qt-only build.
10. Install icon for Qt-only build.

0.5.0
-----
 1. Add ability to calculate replaygain tags. (KDE only)
 2. Add a VERY basic http server so that local files can be played even when
    connected to MPD from a non-local socket.
 3. Add grouped playqueue style - where album entries are grouped.
 4. Add option (in sidebar's context menu) to auto-hide the library, etc,
    browser pages when the mouse is not over them. Thanks to Piotr Wicijowski
    for implementing this.
 5. Add support for mounting a 'device' via sshfs, and for treating a local
    folder as a device. Currently NOT in main build, to use pass
    -DENABLE_REMOTE_DEVICES=1 to cmake
 6. Add "Open File Manager" action to folder page context menu. (KDE only)
 7. Open local files passed on commandline - if using local socket, or http
    server. (KDE only)